[package]
name = "jlox-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/lexer"]

[workspace.dependencies]
thiserror = "2.0"
miette = { version = "7.4", features = [] }
pretty_assertions = "1.4"

[dependencies]
lexer = { path = "crates/lexer" }
thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
