[package]
name = "jlox-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/lexer", "crates/parser"]

[workspace.dependencies]
thiserror = "2.0"
miette = { version = "7.4", features = [] }
pretty_assertions = "1.4"

[dependencies]
lexer = { path = "crates/lexer" }
parser = { path = "crates/parser" }
thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
